--- a/index.html
+++ b/index.html
@@ -17,19 +17,25 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="intro">
         <h2>Your Go-To Web Design Solution</h2>
-        <p>We create stunning websites tailored to your brand.</p>
+        <p>Welcome to Pixel Perfection!
+           Where every pixel has a purpose, and no detail is too small.
+           I’m a web designer with an eye for clean, modern, and scroll-stopping design. Whether you need a bold brand website, a sleek portfolio, or a full online experience that actually converts, I bring your vision to life—beautifully and precisely.
+           From wireframe to wow-factor, I’m all about creating websites that not only look amazing, 
+            but actually work for your business. Let’s turn your clicks into clients—one perfect pixel at a time. 
+            We create stunning websites tailored to your brand.</p>
         <a href="services.html" class="btn">Explore Services</a>
     </section>
     <section class="hero">
         <div class="hero-content">
             <h1>Transform Your Online Presence</h1>
-            <p>Custom web design solutions tailored to your business needs.</p>
+            <p>Welcome to Pixel Perfection!</p>
             <a href="contact.html" class="cta-btn">Get Started</a>
         </div>
     </section>
