--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="images/Buisness-logo.png" class="logo">
+        <img src="Buisness-logo.png" class="logo">
         <h1>Welcome to Pixel Perfection Design</h1>
         <nav>
             <ul>
