--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="Images/Buisness-logo.png" class="logo">
+        <img src="Buisness-logo.png" class="logo">
         <h1>My Portfolio</h1>
         <nav>
             <ul>
