--- a/services.html
+++ b/services.html
@@ -1,36 +1,24 @@
 <section id="services">
     <h2>Our Services</h2>
     <p>We offer a range of web design and development services to meet your needs.</p>
-        <div class="service-card">
-            <img src="images/seo.png" alt="SEO Optimization">
-            <h3>SEO Optimization</h3>
-            <p>Boost your website’s visibility with advanced SEO strategies.</p>
-            <p class="price">$299</p>
-        </div>
-        <div class="service-card">
-            <img src="images/ecommerce.png" alt="E-Commerce Solutions">
-            <h3>E-Commerce Setup</h3>
-            <p>Fully optimized online stores with seamless payment integration.</p>
-            <p class="price">$499 - $1,499</p>
-        </div>
-    </div>
+        
 </section>
 <section id="pricing">
     <h2>Pricing Plans</h2>
     <div class="pricing-table">
     <div class="pricing-tier">
         <h3>Basic</h3>
-        <p>$199 - Starter website with up to 3 pages</p>
+        <p>$199-299 - Starter website with up to 3 pages</p>
         <a href="contact.html?plan=basic" class="choose-plan-btn">Choose Plan</a>
     </div>
     <div class="pricing-tier">
         <h3>Standard</h3>
-        <p>$499 - Custom website with advanced SEO</p>
+        <p>$399-499 - Custom website with advanced SEO</p>
         <a href="contact.html?plan=standard" class="choose-plan-btn">Choose Plan</a>
     </div>
     <div class="pricing-tier">
         <h3>Premium</h3>
-        <p>$999 - Full business site with e-commerce integration</p>
+        <p>$599-799 - Full business site with e-commerce integration</p>
         <a href="contact.html?plan=premium" class="choose-plan-btn">Choose Plan</a>
     </div>
 </div>
