--- a/Portfolio.html
+++ b/Portfolio.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="Buisness-logo.png" class="logo">
+        <img src="Images/Buisness-logo.png" class="logo">
         <h1>My Portfolio</h1>
         <nav>
             <ul>
@@ -47,6 +47,7 @@ Let me know if you'd like any refinements!</p>
             <h3>More coming soon...</h3>
         </div>
     </section>
+   <a href="index.html" class="back-to-home">Back to Home</a>
     <footer>
         <p>&copy; 2025 Pixel Perfection Design. All rights reserved.</p>
     </footer>
